--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.Square {
+    width: 100px;
+    height: 100px;
+    border: 0;
+    background-color: white;
+    color: #374151;
+    font-size: 2rem;
+    border: 1px solid #d2d6dc;
+    font-weight: bold;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Square:hover {
+    cursor: pointer;
+}
+
+.Board {
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Game {
+    margin: 100px;
+   text-align: center; 
+}
+
+.Row {
+    display: flex;
+    flex-direction: row;
+}
+.Board > button {
+    margin: 10px;
+    height: 40px;
+    width: 120px;
+    display: flex;
+    border-radius: 0.5rem;
+    border: 0;
+    border: 1px solid white;
+    font-weight: bold; 
+    align-items: center;
+    justify-content: center;
+    background-color: turquoise;
+    cursor: pointer;
 }
